@@ -102,7 +102,7 @@ enum EventType {
 	/**
 	 * Any
 	 */
-	MGMT_GN_EVENT_ANY = 0x000,
+	MGMT_EVENT_ANY = 0x000,
 	/**
 	 * Location
 	 */
@@ -114,10 +114,15 @@ enum EventType {
 	 */
 	MGMT_GN_EVENT_CONF_UPDATE_AVAILABLE = 0x300,
 	MGMT_GN_EVENT_CONF_REQUEST = 0x301,
+	MGMT_FAC_EVENT_CONF_REQUEST = 0x311,
 	MGMT_GN_EVENT_CONF_CONT_RESPONSE = 0x302,
+	MGMT_FAC_EVENT_CONF_CONT_RESPONSE = 0x312,
 	MGMT_GN_EVENT_CONF_BULK_RESPONSE = 0x303,
+	MGMT_FAC_EVENT_CONF_BULK_RESPONSE = 0x313,
 	MGMT_GN_EVENT_CONF_COMM_PROFILE_REQUEST = 0x304,
+	MGMT_FAC_EVENT_CONF_COMM_PROFILE_REQUEST = 0x314,
 	MGMT_GN_EVENT_CONF_COMM_PROFILE_RESPONSE = 0x305,
+	MGMT_FAC_EVENT_CONF_COMM_PROFILE_RESPONSE = 0x315,
 	/**
 	 * State
 	 */
